2002-10-02  Yuji Abe <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03332] Re: hang up when seeing web page that contains xbm file
	* w3mimg/x11/x11_w3mimg.c (x11_load_image): transparent support

2002-10-02  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>

	* [w3m-dev 03331] Re: hang up when seeing web page that contains	 xbm file
	* configure: check gdk-pixbuf-config existence

2002-10-01  Yuji Abe <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03330] Re: hang up when seeing web page that contains xbm file
	* w3mimg/x11/x11_w3mimg.c (x11_load_image): scaling

2002-09-30  Yuji Abe <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03327] gdk-pixbuf support for w3m-img/x11
	* configure (use_w3mimg_x11) Imlib1 or GdkPixbuf
		check gdkpixbuf
	* w3mimg/x11/x11_w3mimg.c (USE_GDKPIXBUF): added
		(x11_init): USE_GDKPIXBUF
		(x11_load_image): USE_GDKPIXBUF
		(x11_get_image_size): USE_GDKPIXBUF

2002-09-30  qhwt@myrealbox.com

	* [w3m-dev 03325] Re: hang up when seeing web page that contains xbm file
	* w3mimgdisplay.c (main): alreays return response 
				even if size is unknown

2002-09-29  Hiroaki Shimotsu <shim@d5.bs1.fc.nec.co.jp>

	* [w3m-dev 03323] EDITOR
	* main.c (MAIN): use not_null()

2002-09-29  AIDA Shinra <aida-s@jcom.home.ne.jp>

	* Re: [w3m-dev 03320] Re: Passwords
	* etc.c (dir_under): same path is ok
	* file.c (loadGeneralFile): if missing, return NULL
		ssl cert already checked
	* html.h (URLFILE): add ssl_certificate
	* istream.c (ssl_get_certificate): change args
	* istream.h (ssl_get_certificate): ditto
	* url.c (openSSLHandle): add p_cert
		ssl certificate check here
		(HTTPrequest): auth_cookie fix

2002-09-25  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03321] Bug#162104: file descriptors 1 and 2 are closed rather than reopened to /dev/null
	* etc.c (mySystem): fd 0,1,2 redirect /dev/null, close all other fds

2002-09-25  AIDA Shinra <aida-s@jcom.home.ne.jp>

	* [w3m-dev 03319] mailto
	* main.c (followA): mailto
	* main.c (cmd_loadURL): mailto